--- a/ejemplo-04-ecomerce/assets/css/style.css
+++ b/ejemplo-04-ecomerce/assets/css/style.css
@@ -1,11 +1,54 @@
+html {
+    box-sizing: border-box;
+  }
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+
+
 h1{
     color: #000000;
 }
 
-h1 span{
+/* globales */
+a{
+    text-decoration: none;
+}
+.contenedor{
+    max-width: 1200px;
+    margin-top: 0;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto;
+}
+
+img{
+    max-width: 100%;
+}
+
+/* header y navegacion */
+
+
+
+.nombre-sitio{
+    margin-top: 25px;
+    margin-bottom: 25px;
+    text-align: center;
+}
+
+.nombre-sitio span{
     color: #2988E0;
 }
 
+.contenedor-navegacion{
+    border-top: 1px solid #C1C1C1;
+}
+.banner{
+    background-image: url('../images/principal.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 490px;
+}
 /* 
 
 id unico se agrega #
@@ -15,9 +58,22 @@ en una sola etiqueta
 
 */
 
-#navegacion{
-    background-color: aqua;
+.nav-principal{
+    
+    padding: 10px 0;
+    /* padding-top: 10px;
+    padding-bottom: 10px; */
+    display: flex;
+
+    flex-direction: row;
+    justify-content: space-around;
 }
-.navegacion-categorias{
-    background-color: brown;
+
+
+.listado-categorias{
+    display: grid;
+
+    /* grid-template-columns: 200px 200px 200px 200px; */
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 20px;
 }
